Issue #15001: fix segfault on "del sys.module['__main__']"

Patch by Victor Stinner.